fixed chart position/logo placement and cropping on stock detail page

--- a/react-app/src/components/stockDetail/stockDetail.css
+++ b/react-app/src/components/stockDetail/stockDetail.css
@@ -59,10 +59,11 @@
     flex-direction: column;
     align-items: center;
     width:800px;
+    height: 260px;
+    overflow-y: scroll;
+    overflow-x: hidden;
     padding: 20px;
     border: 1px solid #00da86;
-
-
 }
 .sd-stock-about-title{
     font-weight: bold;
@@ -74,6 +75,7 @@
 .sd-stock-about-p{
     color: #958dc5;
     text-align: justify;
+    background-color: #151129;
 }
 
 .sd-chart-top-banner{
@@ -127,7 +129,7 @@
 
 .sd-stock-chart-img{
     object-fit:fill;
-    height: 100%;
+    height: calc(100% - 80px);
     width: 100%;
 }
 
